--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-cookie": "^6.1.1",
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
