--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/axios": "^0.14.0",
     "@types/prettier": "^3.0.0",
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.9",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
