--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -19,11 +19,11 @@ jobs:
 
     - name: SSH and Run Script
       run: |
-        ssh -o "StrictHostKeyChecking=no" username@yourserver.com << 'EOF'
-          echo "Starting script execution"
-          # 여기에 실행할 명령어들을 추가하세요
-          cd /path/to/directory
+        ssh -o "StrictHostKeyChecking=no" -p 31220 billi@129.154.207.190 << 'EOF'
+          cd /home/billi/Projects/mad-for-post-client
           git pull
-          ./run_some_tasks.sh
+          pm2 delete "mad4post-client"
+          npm run build
+          pm2 start npm --name "mad4post-client" -- run start 
           echo "Script execution completed"
         EOF
