--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-cookie": "^6.1.1",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
