--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +15,7 @@
     "@types/axios": "^0.14.0",
     "@types/prettier": "^3.0.0",
     "axios": "^1.6.2",
+    "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.12",
     "next": "14.0.3",
     "prettier": "^3.1.0",
