--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18",
     "react-query": "^3.39.3",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
