--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "prettier": "^3.1.0",
     "react": "^18",
     "react-cookie": "^6.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
