--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -23,6 +23,7 @@ jobs:
           cd /home/billi/Projects/mad-for-post-client
           git pull
           pm2 delete "mad4post-client"
+          npm i
           npm run build
           pm2 start npm --name "mad4post-client" -- run start 
           echo "Script execution completed"
