--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hello-pangea/dnd": "^16.5.0",
     "@heroicons/react": "^2.1.1",
     "@types/axios": "^0.14.0",
     "@types/prettier": "^3.0.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.6.2",
     "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.12",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^6.1.1",
     "react-dnd": "^16.0.1",
     "react-dom": "^18",
