--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.6.2",
     "cookies-next": "^4.1.0",
+    "copy-text-to-clipboard": "^3.2.0",
     "framer-motion": "^10.16.12",
     "next": "14.0.3",
     "prettier": "^3.1.0",
