feat: auto posting

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "cookies-next": "^4.1.0",
     "copy-text-to-clipboard": "^3.2.0",
     "framer-motion": "^10.16.12",
+    "fs": "^0.0.1-security",
+    "instagram-private-api": "^1.45.3",
+    "instagram-web-api": "^2.2.2",
+    "net": "^1.0.2",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
@@ -32,6 +36,7 @@
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "tls": "^0.0.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
