--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.5.0",
     "@heroicons/react": "^2.1.1",
+    "@react-oauth/google": "^0.12.1",
     "@types/axios": "^0.14.0",
     "@types/prettier": "^3.0.0",
     "@types/react-beautiful-dnd": "^13.1.8",
@@ -25,6 +26,7 @@
     "fs": "^0.0.1-security",
     "instagram-private-api": "^1.45.3",
     "instagram-web-api": "^2.2.2",
+    "jwt-decode": "^4.0.0",
     "net": "^1.0.2",
     "next": "14.0.3",
     "prettier": "^3.1.0",
