--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-cookie": "^6.1.1",
     "react-dnd": "^16.0.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
